# FlashDiscord

./: README.md
AIRDiscordExe/: asconfig.json
AIRDiscordExe/src/: Main-app.xml
AIRDiscordLibrary/: asconfig.json
AIRDiscordLibrary/src/: AIRDiscordLibrary-extension.xml
AIRDiscordLibrary/src/com/AIRDiscord/: AIRDiscordWrapper.as
ANEPacking/: pack.bat
NativeDiscordWrapper/: CMakeLists.txt
NativeDiscordWrapper/include/: native_discord_wrapper.hpp
NativeDiscordWrapper/src/: main.cpp  native_discord_wrapper.cpp
